--- a/config.py.example
+++ b/config.py.example
@@ -3,7 +3,7 @@ BOT_PREFIX = '!'
 TOKEN = 'bot token goes here'
 GAME_CHANNEL = '390863884010913792'
 DEBUG_CHANNEL = 'debug channel id (for all your errors and debug stuff)'
-WEREWOLF_SERVER = 'id of server the bot is running on'
+WEREWOLF_SERVER = '386508897030111245'
 PLAYERS_ROLE_NAME = 'Players'
 ADMINS_ROLE_NAME = 'Admins'
 WEREWOLF_NOTIFY_ROLE_NAME = 'Werewolf Notify'
