--- a/config.py.example
+++ b/config.py.example
@@ -7,7 +7,7 @@ WEREWOLF_SERVER = '386508897030111245'
 PLAYERS_ROLE_NAME = 'Players'
 ADMINS_ROLE_NAME = 'Admins'
 WEREWOLF_NOTIFY_ROLE_NAME = 'Werewolf Notify'
-ADMINS = ['admin id', 'admin 2 id', 'etc.']
+ADMINS = ['301331888558309376']
 IGNORE_LIST = []
 TOKENS_GIVEN = 5
 TOKEN_RESET = 10
